<?xml version="1.0" encoding="utf-8"?>
<resources>
	
	<!-- Aplicacion -->
    <string name="app_name">Nutriapp_Android</string>
    <string name="titulo_actionbar">NUTRIAPP</string>
    <string name="action_settings">Settings</string>
    
    <!-- Menu inicial -->
    <string name="btn_personalizacion">DIETA PERSONALIZADA</string>
    <string name="btn_recetas">BUSCAR RECETAS</string>
    <string name="checbox_config_inicial">Mostrar siempre al iniciar</string>
    
    <!-- Busqueda recetas -->
    <string name="filtro_receta">Realiza un filtro sobre la comida que deseas!!!</string>
    <string name="buscar_receta">Buscar receta</string>
    <string-array name="array_busqueda">
        <item >Desayuno</item>
        <item >Nueves</item>
        <item >Almuerzo</item>
        <item >Onces</item>
        <item >Cena</item>
        <item >Todas</item>
    </string-array>
    
    <!-- Inicio de sesion y registro -->
    <string name="usuario_login">Correo or Nombre de usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="olvido_contrasena"><u>¿Olvido su contraseña?</u></string>
    <string name="usuario_registro">Nombre de usuario</string>
    <string name="correo">Correo electronico</string>
    
    <!-- dieta personalizada - configuracion perfil -->
    <string name="navegacion_atras">Anterior configuracion</string>
    <string name="navegacion_siguiente">Siguiente configuracion</string>
    <string name="guardar_perfil">Guardar Informacion</string>
    <string name="imagen_perfil">Imagen de perfil</string>
    <string name="genero_usuario">Genero:</string>
    <string name="genero_hombre">M</string>
    <string name="genero_mujer">F</string>
    <string name="peso_actual">Peso (Actual):</string>
    <string name="peso_meta">Peso (Meta):</string>
    <string name="estatura">Estatura:</string>
    <string name="fecha_nacimiento">Fecha de nacimiento:</string>
    <string name="estado_salud">Estado de salud:</string>
    <string name="abreviatura_peso">Kg</string>
    <string name="abreviatura_altura">Mt</string>
    <string name="nivel_actividad">Nivel de Actividad:</string>
    <string name="objetivo_usuario">Objetivo de la dieta:</string>
    
    <!-- dieta personalizada - menu diario -->
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    
    

</resources>